--- a/HomePage/Print/index.html
+++ b/HomePage/Print/index.html
@@ -28,7 +28,8 @@
       <div class="col-3">
         <div class="py-2 sticky-top flex-grow-1">
           <div class="nav flex-sm-column">
-            <a href="" class="nav-link"><h1>Print</h1></a>
+            <a href="" class="nav-link"><h3>Print</h3></a>
+            <a href="" class="nav-link">Home</a>
             <a href="" class="nav-link">Fibers</a>
             <a href="" class="nav-link">Production</a>
             <a href="" class="nav-link">Video</a>
@@ -87,7 +88,10 @@
         <p>photo book of images taken in Harbin and Hong Kong</p>
         <p>hand bound, Hamada offset printed by artist</p>
       </div>
-      
+
     </div>
   </div>
+  <footer>
+    <p id="footer">built by Genie Hong and Tommy Tran </p>
+  </footer>
 </body>
