--- a/Fibers/index.html
+++ b/Fibers/index.html
@@ -28,65 +28,109 @@
       <div class="col-3">
         <div class="py-2 sticky-top flex-grow-1">
           <div class="nav flex-sm-column">
-            <a href="" class="nav-link"><h3>Print</h3></a>
-            <a href="" class="nav-link">Home</a>
-            <a href="" class="nav-link">Fibers</a>
-            <a href="" class="nav-link">Production</a>
-            <a href="" class="nav-link">Video</a>
-            <a href="" class="nav-link">About</a>
-            <a href="" class="nav-link">CV</a>
+            <a href="" class="nav-link"><h3>Fibers</h3></a>
+            <a href="https://g3ni3.com/" class="nav-link">Home</a>
+            <a href="https://g3ni3.com/Print" class="nav-link">Print</a>
+            <a href="https://g3ni3.com/alienfood.html" class="nav-link">Video</a>
+            <a href="https://g3ni3.com/About" class="nav-link">About</a>
+            <a href="https://g3ni3.com/CV" class="nav-link">CV</a>
           </div>
         </div>
       </div>
 
       <div class="col-9">
 
-        <!-- TV TIME  -->
+        <!-- Mom, Dad, Dunes  -->
         <div class="item">
         <div class="caro">
           <div class="slide">
-            <img src="./images/TV_1.jpg" class="d-block " alt="..." />
+            <img src="./images/mom_dad_dunes.jpg" class="d-block " alt="..." />
           </div>
           <div class="slide">
-            <img src="./images/TV_2.jpg" class="d-block " alt="..." />
+            <img src="./images/mom_dad_dunes4.jpg" class="d-block " alt="..." />
           </div>
           <div class="slide">
-            <img src="./images/TV_3.jpg" class="d-block " alt="..." />
+            <img src="./images/mom_dad_dunes3.jpg" class="d-block " alt="..." />
           </div>
           <div class="slide">
-            <img src="./images/TV_4.jpg" class="d-block " alt="..." />
+            <img src="./images/mom_dad_dunes2.jpg" class="d-block " alt="..." />
           </div>
           <div class="slide">
-            <img src="./images/TV_5.jpg" class="d-block " alt="..." />
+            <img src="./images/mom_dad_dunes6.jpg" class="d-block " alt="..." />
           </div>
         </div>
-        <p><b>TV TIME</b></p>
+        <p><b>and down came the rain</b></p>
         <p>2018</p>
-        <p>collection of drawings by <a href = "http://carolineleeliu.com/"> Caroline Lee Liu </a></p>
-        <p>risograph printed and perfect bound by Genie Hong</p>
+        <p>mom dancing in the desert</a></p>
+        <p>digital print and perfect bound, on a walnut shelf</p>
+        <p><b>Mom, Dad, Dunes</b></p>
+        <p>2018</p>
+        <p>hand quilted, hand embroidered, cotton, polyester, cotton batting</p>
       </div>
 
-      <!-- WONDERFUL -->
+      <!-- She's Home -->
       <div class="item">
         <div class="caro">
           <div class="slide">
-            <img src="./images/wonderful_1.jpg" class="d-block " alt="..." />
+            <img src="./images/shes_home.jpg" class="d-block " alt="..." />
           </div>
           <div class="slide">
-            <img src="./images/wonderful_2.jpg" class="d-block " alt="..." />
-          </div>
-          <div class="slide">
-            <img src="./images/wonderful_3.jpg" class="d-block " alt="..." />
-          </div>
-          <div class="slide">
-            <img src="./images/wonderful_4.jpg" class="d-block " alt="..." />
+            <video class= "video" height= "400" width= "300" autoplay muted loop style="   max-height: 25rem !important;
+  margin-top: 1rem;
+  margin-bottom: 2rem;"> 
+            <source src="./images/shes_home.mov" type="video/mp4" class="d-block " alt="..." />
+          </video>
           </div>
         </div>
 
-        <p><b>The Most Wonderful Time</b></p>
+        <p><b>She's Home</b></p>
         <p>2018</p>
-        <p>photo book of images taken in Harbin and Hong Kong</p>
-        <p>hand bound, Hamada offset printed by artist</p>
+        <p>You hear the gate open and her 1994 Honda Accord engine shut off...and then remember that you left a dish in the sink and the chicken in the freezer...</p>
+        <p>quilted, appliqued, cotton, cotton batting</p>
+      </div>
+
+      <!-- Calculating the Trajectory of the Belt -->
+      <div class="item">
+        <div class="caro">
+          <div class="slide">
+            <img src="./images/belt_1.jpg" class="d-block " alt="..." />
+          </div>
+          <div class="slide">
+            <img src="./images/belt_2.jpg" class="d-block " alt="..." />
+          </div>
+          <div class="slide">
+            <img src="./images/belt_3.jpg" class="d-block " alt="..." />
+          </div>
+          <div class="slide">
+            <img src="./images/belt_4.jpg" class="d-block " alt="..." />
+          </div>
+        </div>
+
+        <p><b>Calculating the Trajectory of the Belt</b></p>
+        <p>2018</p>
+        <p>quilted, hand embroidered, cotton, cotton batting, rope, clothesline pulleys</p>
+      </div>
+
+      <!-- Last Summer's Vacation Photos -->
+      <div class="item">
+        <div class="caro">
+          <div class="slide">
+            <img src="./images/vacation.jpg" class="d-block " alt="..." />
+          </div>
+          <div class="slide">
+            <img src="./images/vacation_2.jpg" class="d-block " alt="..." />
+          </div>
+          <div class="slide">
+            <img src="./images/vacation_3.jpg" class="d-block " alt="..." />
+          </div>
+          <div class="slide">
+            <img src="./images/vacation_4.jpg" class="d-block " alt="..." />
+          </div>
+        </div>
+
+        <p><b>Last Summer's Vacation Photos</b></p>
+        <p>2017</p>
+        <p>hand embroidered, cotton</p>
       </div>
 
     </div>
