--- a/Print/index.html
+++ b/Print/index.html
@@ -29,12 +29,11 @@
         <div class="py-2 sticky-top flex-grow-1">
           <div class="nav flex-sm-column">
             <a href="" class="nav-link"><h3>Print</h3></a>
-            <a href="" class="nav-link">Home</a>
-            <a href="" class="nav-link">Fibers</a>
-            <a href="" class="nav-link">Production</a>
-            <a href="" class="nav-link">Video</a>
-            <a href="" class="nav-link">About</a>
-            <a href="" class="nav-link">CV</a>
+            <a href="https://g3ni3.com/" class="nav-link">Home</a>
+            <a href="https://g3ni3.com/Fibers" class="nav-link">Fibers</a>
+            <a href="https://g3ni3.com/alienfood.html" class="nav-link">Video</a>
+            <a href="https://g3ni3.com/About" class="nav-link">About</a>
+            <a href="https://g3ni3.com/CV" class="nav-link">CV</a>
           </div>
         </div>
       </div>
@@ -86,7 +85,30 @@
         <p><b>The Most Wonderful Time</b></p>
         <p>2018</p>
         <p>photo book of images taken in Harbin and Hong Kong</p>
-        <p>hand bound, Hamada offset printed by artist</p>
+        <p>hand bound, risograph cover, Hamada offset body, printed by artist</p>
+      </div>
+
+       <!-- CLOG -->
+      <div class="item">
+        <div class="caro">
+          <div class="slide">
+            <img src="./images/clog_4.jpg" class="d-block " alt="..." />
+          </div>
+          <div class="slide">
+            <img src="./images/clog_2.jpg" class="d-block " alt="..." />
+          </div>
+          <div class="slide">
+            <img src="./images/clog_3.jpg" class="d-block " alt="..." />
+          </div>
+          <div class="slide">
+            <img src="./images/clog.jpg" class="d-block " alt="..." />
+          </div>
+        </div>
+
+        <p><b>The Life Cycle of a Clog</b></p>
+        <p>2018</p>
+        <p>documenting the noble life of the Dansko clog</p>
+        <p>accordion hand bound, risograph printed</p>
       </div>
 
     </div>
